--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -44273,3 +44273,27 @@ series:
         url: https://www.meetup.com/prague-junior-software-developer-course/events/290309297/
         dtstart: 2023-01-04 18:00:00+01:00
         dtend: 2023-01-04 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Online workshop: Základy programování'
+        description: 'Become a software developer from 0
+
+          Wednesday, January 4 at 6:00 PM
+
+
+          Nenech si utéct příležitost! Vyzkoušej si kódování pod vedením zkušených mentorů. Seznámíš se základy JavaScriptu i platformou ServiceNow. Navíc získá...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/290309297/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290309297@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/290309297/
+        dtstart: 2023-01-04 18:00:00+01:00
+        dtend: 2023-01-04 21:00:00+01:00
