--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -35788,3 +35788,53 @@ series:
         url: https://www.meetup.com/strv-meetups/events/289309373/
         dtstart: 2022-11-08 18:00:00+01:00
         dtend: 2022-11-08 22:00:00+01:00
+  - meetupcom:
+      meta_description: '**[🔥 PLEASE CLAIM YOUR FREE TICKET HERE 🔥](https://www.eventbrite.com/e/504286984947)**
+
+
+        Still confused about how to write a Flutter app? We have some answers for you! Du'
+      og_title: 'Flutter Workshop: Architecture Using GetX, Wed, Feb 8, 2023, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/strv-meetups/events/290868138/
+      ical:
+        summary: 'Flutter Workshop: Architecture Using GetX'
+        description: 'STRV Meetups
+
+          Wednesday, February 8 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/504286984947)** Still confused about how to write a Flutter app? We have some answers for you! During this workshop, w...
+
+
+          https://www.meetup.com/strv-meetups/events/290868138/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290868138@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/290868138/
+        dtstart: 2023-02-08 18:00:00+01:00
+        dtend: 2023-02-08 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV Backend Meetup - How We Build Backend PRG
+        description: 'STRV Meetups
+
+          Thursday, November 24 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/backend-meetup-how-we-build-backend-prg-tickets-464986867237?aff=meetup)** Curious about how we build backend solution...\n
+
+          https://www.meetup.com/strv-meetups/events/289663632/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289663632@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289663632/
+        dtstart: 2022-11-24 18:00:00+01:00
+        dtend: 2022-11-24 22:00:00+01:00
