--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -49286,3 +49286,27 @@ series:
         url: https://www.meetup.com/morning-talks/events/288152861/
         dtstart: 2022-10-26 09:00:00+02:00
         dtend: 2022-10-26 10:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: IT bezpečnost v cloudu
+        description: 'Morning Talks
+
+          Wednesday, October 26 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/it-bezpecnost-v-cloudu/ **Na co se můžete těšit:**...
+
+
+          https://www.meetup.com/morning-talks/events/288152861/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152861@meetup.com
+        url: https://www.meetup.com/morning-talks/events/288152861/
+        dtstart: 2022-10-26 09:00:00+02:00
+        dtend: 2022-10-26 10:00:00+02:00
