--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -42642,9 +42642,9 @@ series:
         dtstart: 2022-12-12 18:00:00+01:00
         dtend: 2022-12-12 20:00:00+01:00
   - meetupcom:
-      meta_description: V rámci **Dne otevřených dveří** tě necháme nakouknout do našich nových učeben. Zatím jsme je ještě skoro nikomu neukázali, takže budeš mezi prvními. Ale hlavně se seznámíš
-      og_title: Den otevřených dveří aneb navštiv doupě ajťáků!, Sat, Jan 14, 2023, 10:00 AM   | Meetup
-      url: https://www.meetup.com/prague-junior-software-developer-course/events/290418619/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Den otevřených dveří aneb navštiv doupě ajťáků!
         description: 'Become a software developer from 0
