--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -29397,3 +29397,27 @@ series:
         url: https://www.meetup.com/czskppug/events/290709851/
         dtstart: 2023-01-12 17:00:00+01:00
         dtend: 2023-01-12 19:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, January 12 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/290709851/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290709851@meetup.com
+        url: https://www.meetup.com/czskppug/events/290709851/
+        dtstart: 2023-01-12 17:00:00+01:00
+        dtend: 2023-01-12 19:00:00+01:00
