--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -44633,3 +44633,27 @@ series:
         url: https://www.meetup.com/prague-junior-software-developer-course/events/290418619/
         dtstart: 2023-01-14 10:00:00+01:00
         dtend: 2023-01-14 17:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Den otevřených dveří aneb navštiv doupě ajťáků!
+        description: 'Become a software developer from 0
+
+          Saturday, January 14 at 10:00 AM
+
+
+          V rámci **Dne otevřených dveří** tě necháme nakouknout do našich nových učeben. Zatím jsme je ještě skoro nikomu neukázali, takže budeš mezi prvními. ...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/290418619/'
+        location: Green Fox Academy (Václavské nám. 11, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290418619@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/290418619/
+        dtstart: 2023-01-14 10:00:00+01:00
+        dtend: 2023-01-14 17:00:00+01:00
