data: cron update

--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -48475,16 +48475,9 @@ series:
         dtstart: 2022-10-11 09:00:00+02:00
         dtend: 2022-10-11 17:00:00+02:00
   - meetupcom:
-      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
-
-        https://www.datascript.cz/morning-talks/dynamicka-infrastruktura-v-consulu/
-
-
-        **Na co se můžete těšit:**
-
-        V měníc'
-      og_title: Dynamická infrastruktura v Consulu, Wed, Jan 18, 2023, 9:00 AM   | Meetup
-      url: https://www.meetup.com/morning-talks/events/290691440/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Dynamická infrastruktura v Consulu
         description: 'Morning Talks
@@ -49622,3 +49615,32 @@ series:
         url: https://www.meetup.com/morning-talks/events/288152861/
         dtstart: 2022-10-26 09:00:00+02:00
         dtend: 2022-10-26 10:00:00+02:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/prometheus-pro-logging-metering-a-profiling/
+
+
+        Neustále rostoucí nároky '
+      og_title: Prometheus pro logging, metering a profiling, Wed, Feb 15, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/290691523/
+      ical:
+        summary: Prometheus pro logging, metering a profiling
+        description: 'Morning Talks
+
+          Wednesday, February 15 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/prometheus-pro-logging-metering-a-profiling/ Neust...
+
+
+          https://www.meetup.com/morning-talks/events/290691523/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691523@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691523/
+        dtstart: 2023-02-15 09:00:00+01:00
+        dtend: 2023-02-15 10:00:00+01:00
