--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -27465,3 +27465,27 @@ series:
         url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/289395420/
         dtstart: 2022-12-01 18:00:00+01:00
         dtend: 2022-12-01 23:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 53. sraz přátel PHP v Ecomailu v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, December 1 at 6:00 PM
+
+
+          Zveme vás na poslední letošní setkání přátel PHP, tentokrát v kancelářích Ecomailu v centru Prahy. Náš partner si pro nás připravil zajímavé přednášky...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/289395420/'
+        location: Ecomail.cz s.r.o. (Na Zderaze 15, Nové Město, Praha-Praha 2, Czech Republic 120 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289395420@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/289395420/
+        dtstart: 2022-12-01 18:00:00+01:00
+        dtend: 2022-12-01 23:00:00+01:00
