--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -44777,3 +44777,27 @@ series:
         url: https://www.meetup.com/prague-junior-software-developer-course/events/290196884/
         dtstart: 2023-01-18 18:00:00+01:00
         dtend: 2023-01-18 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Online Ladies Coding Night
+        description: 'Become a software developer from 0
+
+          Wednesday, January 18 at 6:00 PM
+
+
+          Dámská jízda pro všechny, které zajímá svět IT, chtějí se setkat s podobně naladěnými lidmi a vyzkoušet si základy kódování.
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/290196884/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290196884@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/290196884/
+        dtstart: 2023-01-18 18:00:00+01:00
+        dtend: 2023-01-18 21:00:00+01:00
