--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -27678,3 +27678,54 @@ series:
         url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288525231/
         dtstart: 2022-10-06 18:00:00+02:00
         dtend: 2022-10-06 23:00:00+02:00
+  - meetupcom:
+      meta_description: 'Zveme vás na pravidelné setkání přátel PHP v Praze, tentokrát v karlínských kancelářích ShipMonk. Tématem večera bude práce s SQL databázemi v PHP, migrace a Doctrine.
+
+
+        Těš'
+      og_title: '55. sraz přátel PHP: Bezpečnější SQL (ShipMonk, Praha), Thu, Feb 16, 2023, 5:30 PM   | Meetup'
+      url: https://www.meetup.com/pražske-srazy-přatel-php-pehapkari-cz/events/291079064/
+      ical:
+        summary: '55. sraz přátel PHP: Bezpečnější SQL (ShipMonk, Praha)'
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, February 16 at 5:30 PM
+
+
+          Zveme vás na pravidelné setkání přátel PHP v Praze, tentokrát v karlínských kancelářích ShipMonk. Tématem večera bude práce s SQL databázemi v PHP, mi...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/291079064/'
+        location: ShipMonk R&D (Rohanské nábř. 23, Karlín, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291079064@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/291079064/
+        dtstart: 2023-02-16 17:30:00+01:00
+        dtend: 2023-02-16 23:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 54. sraz přátel PHP v Košík.cz v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, January 19 at 6:00 PM
+
+
+          Zveme vás na první setkání přátel PHP po Novém roce, tentokrát v kancelářích Košík.cz. Těšit se můžete na zajímavé přednášky, chutné občerstvení po ce...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/290273157/'
+        location: Kosik.cz s.r.o. (Evropská 11/2758, Praha 6, Czech Republic 160 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290273157@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/290273157/
+        dtstart: 2023-01-19 18:00:00+01:00
+        dtend: 2023-01-19 23:00:00+01:00
