data: cron update

--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -36506,3 +36506,26 @@ series:
         url: https://www.meetup.com/strv-meetups/events/289663632/
         dtstart: 2022-11-24 18:00:00+01:00
         dtend: 2022-11-24 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV Backend Meetup - How We Build Backend PRG
+        description: 'STRV Meetups
+
+          Thursday, November 24 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/backend-meetup-how-we-build-backend-prg-tickets-464986867237?aff=meetup)** Curious about how we build backend solution...\n
+
+          https://www.meetup.com/strv-meetups/events/289663632/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289663632@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289663632/
+        dtstart: 2022-11-24 18:00:00+01:00
+        dtend: 2022-11-24 22:00:00+01:00
