data: cron update

--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -21224,3 +21224,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/290350452/
         dtstart: 2023-01-19 18:30:00+01:00
         dtend: 2023-01-19 19:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Building an Open Source Threat Intelligence Platform
+        description: 'TypeDB Prague Engineers
+
+          Thursday, January 19 at 6:30 PM
+
+
+          **Talk Synopsis**Knowledge of cyber threats is a key focus in cyber security. In this talk, we present (https://t.sidekickopen87.com/s3t/c/5/f18dQhb0S...
+
+
+          https://www.meetup.com/typedb-prague/events/290350452/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290350452@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/290350452/
+        dtstart: 2023-01-19 18:30:00+01:00
+        dtend: 2023-01-19 19:30:00+01:00
